--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     font-family: 'Inter', sans-serif;
-    color: #606272;
+    color: $text;
 }
 
 button {
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-    background-color: #000201;
+    background-color: $bg;
 }
 
 a {
