--- a/scss/main.css
+++ b/scss/main.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-  background-color: #000201;
+  background-color: #F2F3F9;
 }
 
 a {
@@ -98,4 +98,49 @@ p {
   font-size: 1.6rem;
   line-height: 160%;
   color: #606272;
+}
+
+header {
+  position: relative;
+}
+header .container nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 4rem;
+  margin-bottom: 3.3rem;
+}
+header .container nav .more-link {
+  display: flex;
+  align-items: center;
+  color: #1C1C1F;
+}
+header .container nav .more-link a {
+  text-decoration: underline;
+  margin-right: 1.6rem;
+  font-size: 1.6rem;
+  line-height: 160%;
+}
+header .container nav .social-medias ul {
+  display: flex;
+  align-items: center;
+}
+header .container nav .social-medias ul li:not(:last-child) {
+  margin-right: 3.5rem;
+}
+header .container .price {
+  background-color: #FDFDFD;
+  padding: 0.8rem 1.6rem;
+  color: #F04264;
+  font-size: 1.3rem;
+  line-height: 1.6rem;
+  border-radius: 12.2rem;
+}
+header .border {
+  z-index: -1;
+  width: 100%;
+  height: 2px;
+  background-color: #FDFDFD;
+  position: absolute;
+  bottom: 8px;
 }/*# sourceMappingURL=main.css.map */
