adicionando s-hero no desktop

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,8 @@
-$bg: #F2F3F9;
+// $bg: #F2F3F9;
+$bg: #E7E7E9;
 $details: #FDFDFD;
 $black: #1C1C1F;
 $text: #606272;
 $input: #989BA7;
-$accent: #F04264;
+$red: #F04264;
+$yellow: #F7B40D;
