--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -39,7 +39,7 @@ header {
             .price {
                 background-color: $details;
                 padding: 0.8rem 1.6rem;
-                color: $accent;
+                color: $red;
                 font-size: 1.3rem;
                 line-height: 1.6rem;
                 border-radius: 12.2rem;
