alterando nome de variável (details para white)

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -41,7 +41,7 @@
                 align-items: center;
                 justify-content: space-between;
 
-                background-color: $details;
+                background-color: $white;
                 padding: 1.1rem 1.5rem;
                 border-radius: 122px;
 
