--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -37,7 +37,7 @@ header {
         }
 
             .price {
-                background-color: $details;
+                background-color: $white;
                 padding: 0.8rem 1.6rem;
                 color: $red;
                 font-size: 1.3rem;
@@ -50,7 +50,7 @@ header {
         z-index: -1;
         width: 100%;
         height: 2px;
-        background-color: $details;
+        background-color: $white;
         position: absolute;
         bottom: 8px;
     }
