--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -29,14 +29,14 @@ p{
     font-family: 'Inter', sans-serif;
     font-size: 1.4rem;
     line-height: 1.7rem;
-    color: $details;
+    color: $white;
     background-color: $black;
     padding: 1.5rem 2.8rem;
     border-radius: 9.76rem;
 }
 
 .card{
-    background-color: $details;
+    background-color: $white;
     width: 100%;
     max-width: 38.4rem;
     border-radius: 12px;
