--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -54,4 +54,18 @@ header {
         position: absolute;
         bottom: 8px;
     }
+
+    @media(max-width: 560px) {
+        .container {
+            nav {
+                .logo {
+                    max-width: 180px;
+                }
+
+                .more-link {
+                    display: none;
+                }
+            }      
+        }    
+    }
 }
