--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -5,6 +5,11 @@ h1 {
     line-height: 7.7rem;
     letter-spacing: -0.01em;
     color: $black;
+
+    @media(max-width: 991px) {
+        font-size: 5rem;
+        line-height: 5rem;
+    }
 }
 
 h2 {
