--- a/scss/main.css
+++ b/scss/main.css
@@ -56,6 +56,12 @@ h1 {
     line-height: 5rem;
   }
 }
+@media (max-width: 560px) {
+  h1 {
+    font-size: 3.5rem;
+    line-height: 3.8rem;
+  }
+}
 
 h2 {
   font-family: "Poppins", sans-serif;
@@ -73,6 +79,12 @@ p {
   font-size: 1.8rem;
   line-height: 160%;
   color: #606272;
+}
+@media (max-width: 560px) {
+  p {
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+  }
 }
 
 .btn {
@@ -269,6 +281,40 @@ header .border {
   }
   .s-hero .container .right-content {
     display: none;
+  }
+}
+@media (max-width: 560px) {
+  .s-hero .container .left-content .text h1 {
+    margin-bottom: 1.5rem;
+  }
+  .s-hero .container .left-content .text .star {
+    z-index: -1;
+    top: -6px;
+  }
+  .s-hero .container .left-content .text .yellow-border {
+    bottom: 10.2rem;
+  }
+  .s-hero .container .left-content .input {
+    margin-top: 3rem;
+    padding: 1rem;
+  }
+  .s-hero .container .left-content .input input {
+    font-size: 1.4rem;
+    padding-left: 1.2rem;
+  }
+  .s-hero .container .left-content .input .btn {
+    font-size: 12px;
+    padding: 1rem;
+  }
+  .s-hero .container .left-content .brands {
+    margin-top: 3rem;
+  }
+  .s-hero .container .left-content .reviews {
+    margin-top: 3rem;
+    gap: 1rem;
+  }
+  .s-hero .container .left-content .reviews .grade-review span {
+    font-size: 1.4rem;
   }
 }
 
