--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -10,6 +10,10 @@ h1 {
         font-size: 5rem;
         line-height: 5rem;
     }
+    @media(max-width: 560px) {
+        font-size: 3.5rem;
+        line-height: 3.8rem;
+    }
 }
 
 h2 {
@@ -28,6 +32,11 @@ p{
     font-size: 1.8rem;
     line-height: 160%;
     color: $text;
+
+    @media(max-width: 560px) {
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+    }
 }
 
 .btn {
