--- a/scss/main.css
+++ b/scss/main.css
@@ -334,4 +334,20 @@ header .border {
   position: absolute;
   top: 11.6rem;
   z-index: -1;
+}
+@media (max-width: 1200px) {
+  .s-benefits .container .cards .card:not(:last-child) {
+    margin-right: 1rem;
+  }
+}
+@media (max-width: 991px) {
+  .s-benefits .container .cards {
+    flex-direction: column;
+  }
+  .s-benefits .container .cards .card {
+    margin-bottom: 2rem;
+  }
+  .s-benefits .white-board {
+    top: 51.5rem;
+  }
 }/*# sourceMappingURL=main.css.map */
