--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -23,6 +23,11 @@ h2 {
     font-size: 2.2rem;
     line-height: 150%;
     color: $black;
+
+    @media(max-width: 560px) {
+        font-size: 2rem;
+        line-height: 2.4rem;
+    }
 }
 
 p{
