--- a/scss/main.css
+++ b/scss/main.css
@@ -154,19 +154,22 @@ header .container nav .social-medias ul li:not(:last-child) {
 }
 header .container .price {
   background-color: #FDFDFD;
+  width: 122px;
   padding: 0.8rem 1.6rem;
-  color: #F04264;
-  font-size: 1.3rem;
-  line-height: 1.6rem;
   border-radius: 12.2rem;
+  line-height: 1.6rem;
+  font-size: 1.3rem;
+}
+header .container .price span {
+  color: #F04264;
 }
 header .border {
   z-index: -1;
   width: 100%;
-  height: 2px;
+  height: 0.2rem;
   background-color: #FDFDFD;
   position: absolute;
-  bottom: 8px;
+  bottom: 1.5rem;
 }
 @media (max-width: 560px) {
   header .container nav .logo {
